--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.9.2
 gunicorn==19.9.0
 idna==2.8
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pytz==2018.9
 requests==2.21.0
 sqlparse==0.3.0
