--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2019.3.9
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2
+django-cors-headers==2.5.2
 django-heroku==0.3.1
 djangorestframework==3.9.2
 gast==0.2.2
